# SubscriptionManagementSystem

./: .coverage  .dockerignore  Dockerfile  README.md  docker-compose.yml  env_example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
materials/: models.py  paginators.py  serialaiserz.py  serialiserz.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_rename_name_course_title_rename_name_lesson_title.py  0003_course_owner_lesson_owner.py  0004_alter_course_preview_alter_lesson_course_and_more.py
users/: filters.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/fixtures/: payments.json
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_options_subscription.py  0004_payment_link_payment_session_id_alter_payment_amount.py  0005_subscription_is_active.py
